--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
-{
+  {
   "name": "rest-express",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev": "tsx watch server/index.ts",
     "build": "tsx script/build.ts",
-    "start": "NODE_ENV=production node dist/index.cjs",
+    "start": "tsx server/index/ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
