--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx watch server/index.ts",
-    "build": "tsx script/build.ts",
+
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+
     "start": "tsx server/index/ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
